[package]
name = "ps-payload-injector"
version = "1.1.0"
edition = "2021"

[lib]
name = "ps_payload_injector"
path = "src/lib.rs"

[[bin]]
name = "ps-payload-injector"
path = "src/main.rs"

[dependencies]
eframe = "0.31.1"
rfd = "0.15.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
